--- a/Web/BDAProject.Web/Properties/launchSettings.json
+++ b/Web/BDAProject.Web/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -12,16 +12,16 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "SENDGRID_KEY": "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"
       }
     },
     "BDAProject.Web": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
